--- a/landing-sass.html
+++ b/landing-sass.html
@@ -25,6 +25,7 @@
 
 <!-- Theme CSS -->
 <link rel="stylesheet" href="./assets/css/theme.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdi/css/materialdesignicons.min.css">
   <link rel="canonical" href="landing-sass.html">
   <title>Procuris </title>
 </head>
@@ -137,7 +138,7 @@
       </div>
     </section>
     <!-- Client logo -->
-    <section class="py-lg-20 py-7">
+    <section class="py-lg-20 py-7 bg-gray-200 mb-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-3 col-12">
@@ -590,7 +591,7 @@
               <div class="mb-4">
                 <h3 class="fw-bold mb-3">Nous contacter</h3>
                 <p>3 rue du Rocher 92600 Asnières-sur-Seine</p>
-                <p class="mb-1">Email: <a href="landing-sass.html#">Email: vvannier@osabuy.com</a></p>
+                <p class="mb-1">Email: <a href="landing-sass.html#">vvannier@osabuy.com</a></p>
                 <p>Téléphone: <span class="text-dark fw-semibold">06 81 38 80 28</span></p>
 
               </div>
