--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </script>
 
 <!-- Favicon icon-->
-<link rel="shortcut icon" type="image/x-icon" href="./assets/PROCURIS-LOGO.png" >
+<link rel="shortcut icon" type="image/x-icon" href="./assets/PROCURIS-LOGO.png">
 
 
 <!-- Libs CSS -->
@@ -141,7 +141,7 @@
           <div class="offset-xl-1 col-xl-10 col-md-12 col-12">
             <!-- Heading -->
             <div class="text-center mb-6 px-md-8">
-              <span class="ls-md">REJOIGNEZ LES ACTEURS LES PLUS IMPORTANT DU SECTEUR</span>
+              <span class="ls-md">REJOIGNEZ LES ACTEURS LES PLUS IMPORTANTS DU SECTEUR</span>
             </div>
             <!-- row -->
             <div class="row text-center">
@@ -417,12 +417,12 @@
                       <span>à partir de</span>
                       <div class="d-flex mb-4">
                         <div class="price-card--price-number
-                          toggle-price-content-second fw-bold text-dark fs-1 lh-1" data-price-monthly="39" data-price-yearly="390">
+                          toggle-price-content-second fw-bold text-dark fs-1 lh-1" data-price-monthly="39" data-price-yearly="32,5">
                           39
                         </div>
 						<span class="h3 mb-0 fw-bold">€</span>
 						<span class="align-self-end mb-1 ms-2
-						toggle-price-content-second" data-price-monthly="/moins" data-price-yearly="/an">/mois</span>
+						toggle-price-content-second" data-price-monthly="/mois" data-price-yearly="/mois">/mois</span>
 						
                       </div>
                     </div>
@@ -467,13 +467,13 @@
                       <span>à partir de</span>
                       <div class="d-flex mb-4">
                         <div class="price-card--price-number
-                          toggle-price-content-second fw-bold text-dark fs-1 lh-1" data-price-monthly="249" data-price-yearly="2490">
+                          toggle-price-content-second fw-bold text-dark fs-1 lh-1" data-price-monthly="249" data-price-yearly="207,5">
                           249
 
                         </div>
                         <span class="h3 mb-0 fw-bold">€</span>
                         <span class="align-self-end mb-1 ms-2
-                          toggle-price-content-second" data-price-monthly="/moins" data-price-yearly="/an">/mois</span>
+                          toggle-price-content-second" data-price-monthly="/mois" data-price-yearly="/mois">/mois</span>
                       </div>
                     </div>
                     <!-- button  -->
@@ -594,7 +594,7 @@
             <div class="col-lg-4 col-md-6 col-12">
                   <!-- about company -->
               <div class="mb-4">
-                <img src="./assets/PROCURIS.png" alt="logo-procuris" style="width: 200px;" class="logo-inverse ">
+                <img src="./assets/PROCURIS.png" alt="logo" style="width: 200px;" class="logo-inverse ">
                
                 <div class="mt-4">
                   <div class="fs-4 mt-4">
