--- a/index.html
+++ b/index.html
@@ -598,9 +598,7 @@
                
                 <div class="mt-4">
                   <div class="fs-4 mt-4">
-                    <a href="landing-sass.html#" class="mdi mdi-facebook fs-4 text-muted me-2"></a>
-                    <a href="landing-sass.html#" class="mdi mdi-twitter text-muted me-2"></a>
-                    <a href="landing-sass.html#" class="mdi mdi-instagram text-muted "></a>
+                    <a href="https://fr.linkedin.com/company/procuris" class="mdi mdi-linkedin fs-4 text-muted me-2"></a>
                   </div>
                 </div>
               </div>
