--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </script>
 
 <!-- Favicon icon-->
-<link rel="shortcut icon" type="image/x-icon" href="./assets/PROCURIS-LOGO.png">
+<link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
 
 
 <!-- Libs CSS -->
