--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 				<div class="offset-xl-2 col-xl-8 offset-lg-1 col-lg-10 col-md-12 col-12">
 					<!-- pricing -->
 					<div class="mb-6 text-center">
-						<p class="lead mb-4"style="color: #F59E0B;">Faite avancer les choses</p>
+						<p class="lead mb-4"style="color: #F59E0B;">Faites avancer les choses</p>
 
 					  <h2 class="display-4 mb-3 ">Essayez-le simplement ! Vous ne vous en passerez plus.</h2>
 					  <p class="display-8 mb-4">Spécialement conçu pour les entreprises souhaitant améliorer et simplifier leurs processus d'achat.</p>
