--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
     <section class="pt-lg-16 pb-lg-14 pt-8 pb-8" id="tarifs">
       <div class="container">
         <div class="row">
-          <div class="offset-xl-2 col-xl-8 offset-lg-1 col-lg-10 col-md-12 col-12">
+          <div class="pt-lg-16 pb-lg-14 pt-8 pb-8">
             <!-- pricing -->
             <div class="mb-8 text-center">
               <h2 class="display-4 mb-3 fw-bold">Choisissez votre abonnement idéal</h2>
@@ -517,7 +517,7 @@
                 <!-- Card -->
                 <div class="card shadow-none border mb-3">
                   <!-- Card body -->
-                  <div class="p-5 d-flex flex-column align-items-center justify-content-center"style="opacity: 0.5; padding: 48.12px!important;">
+                  <div class="p-5 d-flex flex-column align-items-center justify-content-center"style="opacity: 0.5; padding: 62.5px!important">
 					<div class="mb-5 text-center">
                       <h4 class="fw-bold text-uppercase ls-md mb-4 text-center">Marque blanche</h4>
 					  <h4 class="fw-bold text-uppercase ls-md mb-4 text-center">Sur demande</h4>
